# ESET462Project

./: .gitmodules  CMakeLists.txt  README.md  SHT40Test.cpp  build_log.txt
Inc/: Application.hpp  ApplicationConfig.h  FanControl.h  FreeRTOSConfig.h  Hardware.hpp  HardwareConfig.h  HeaterControl.h  PIDHandler.h  PWMHandlers.h  RTOSTasks.hpp  System.hpp  TempHandlers.h  UserDebug.hpp  ZDomainPI.h
Src/: Application.cpp  FanControl.cpp  Hardware.cpp  HeaterControl.cpp  PIDHandler.cpp  PWMHandlers.cpp  RTOSTasks.cpp  SHT40Test.cpp  System.cpp  TempHandlers.cpp  UserDebug.cpp  ZDomainPI.c  main.cpp
Tools/FanCharacterization/: CMakeLists.txt  FanCharacterization.cpp
Tools/HeaterCharacterization/: CMakeLists.txt  Characterization_2.csv  CooldownFan.csv  Cooloff_1.csv  HeaterCharacterization.cpp  HeatingFan_1.csv
